--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+bind -r Space select-pane -t .+1 \;  resize-pane -Z
+
 # do not jump bottom after copying
 set -g @yank_action 'copy-pipe'
 
