--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g default-shell /opt/homebrew/bin/fish
 
 set -g mouse on
 
@@ -33,8 +34,8 @@ set -g @yank_action 'copy-pipe'
 bind '"' split-window -v -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
 
-bind -n M-H previous-window
-bind -n M-L next-window
+bind -n S-Left previous-window
+bind -n S-Right next-window
 
 # start last session when tmux is started
 set -g @continuum-restore 'on'
