--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+unbind r
+bind r source-file ~/.tmux.conf
+
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-shell /opt/homebrew/bin/fish
@@ -16,8 +19,8 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# prefix-Enter to zoom current pane
-bind-key Enter resize-pane -Z
+# Shift-Enter to zoom current pane
+bind-key -n S-Enter resize-pane -Z
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -25,7 +28,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind -r Space select-pane -t .+1 \;  resize-pane -Z
+# bind -r Space select-pane -t .+1 \;  resize-pane -Z
 
 # do not jump bottom after copying
 set -g @yank_action 'copy-pipe'
@@ -41,9 +44,17 @@ bind -n S-Right next-window
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
-set -g @catppuccin_status_modules "application session user host"
-set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_flavor "frappe"
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_current_text "#W"
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_directory}"
+set -ag status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -52,6 +63,8 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'alexwforsythe/tmux-which-key'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$HOMEBREW_PREFIX/opt/tpm/share/tpm/tpm'
