--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ bind -n S-Right next-window
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
-set -g @catppuccin_flavor "frappe"
+set -g @catppuccin_flavor "latte"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_current_text "#W"
