some keymaps and options

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,7 @@ bind % split-window -h -c '#{pane_current_path}'
 
 bind -n S-Left previous-window
 bind -n S-Right next-window
+bind g popup -E -d "#{pane_current_path}" -w 90% -h 90% "lazygit"
 
 # start last session when tmux is started
 set -g @continuum-restore 'on'
